added the possibility to exclude/include replies and retweets

--- a/FlaskApp/templates/tweets.html
+++ b/FlaskApp/templates/tweets.html
@@ -34,6 +34,15 @@
                     <input id="startDate" class="form-control" type="date" name="startDate" required/>
                     <label for="endDate">End Date</label>
                     <input id="endDate" class="form-control" type="date" name="endDate" required/>
+                    <input type="checkbox" id="isRetweet" name="isRetweet">
+                    <label class="form-check-label" for="isRetweet">
+                        Include Retweets
+                    </label>
+                    <input type="checkbox" id="isReply" name="isReply">
+                    <label class="form-check-label" for="isReply">
+                        Include Replies
+                    </label>
+                      
                 </div>
 
                 <div class="text-center"><button type="submit" class="btn btn-primary">See Tweets</button></div>  
